--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.19",
     "dotenv": "^16.4.5",
+    "i18next": "^23.10.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.0",
     "usehooks-ts": "^2.15.1",
     "viem": "^1.16.4",
     "web3": "^4.4.0",
