--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.0",
     "usehooks-ts": "^2.15.1",
     "viem": "^1.16.4",
